--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,29 @@ img {
   display: block;
   max-width: 100%;
 }
+
+/* 02-timer.js */
+
+button[data-start] {
+  width: 70px;
+}
+
+.timer {
+  display: flex;
+}
+
+div.field {
+  margin: 0 15px;
+  text-align: center;
+  width: 60px;
+  font-family: initial;
+}
+
+span.value {
+  font-size: 45px;
+}
+
+span.label {
+  font-size: 15px;
+  text-transform: uppercase;
+}
